Fix alignment of short warning text

--- a/src/nationalarchives/components/warning/warning.scss
+++ b/src/nationalarchives/components/warning/warning.scss
@@ -55,6 +55,7 @@
   }
 
   &__body {
+    width: 100%;
     margin-top: 0;
 
     flex: 1;
